# PcalExpand

./: Ama_config.yaml  DAT_DIM.xlsx  DAT_ESF.xlsx  README.md  config.yaml  dim.py  log.txt  orquestrador.py  pyproject.toml  run.py  worker.py  write.py
utils/: convert.py  extract.py  misc.py  monitor.py  output.py  plot.py  pos_processing.py  preparation.py  schema.py  wapper.py
